src/test/ui/consts/issue-63952.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-63952.rs:18:5
   |
LL | /     SliceTransmute {
LL | |         repr: SliceRepr {
LL | |             ptr: &42,
LL | |             len: usize::MAX,
LL | |         },
LL | |     }
LL | |     .slice
   | |__________^ type validation failed: encountered invalid reference metadata: slice is bigger than largest supported object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
